--- a/gateway-server.properties
+++ b/gateway-server.properties
@@ -27,5 +27,10 @@ spring.cloud.gateway.routes[2].id=google
 spring.cloud.gateway.routes[2].uri=https://google.com
 spring.cloud.gateway.routes[2].predicates[0]=Path=/google/**
 
+spring.cloud.gateway.routes[3].id=baylor
+spring.cloud.gateway.routes[3].uri=https://baylor.edu
+spring.cloud.gateway.routes[3].predicates[0]=Path=/baylor/**
+
+
 
 
