--- a/gateway-server.properties
+++ b/gateway-server.properties
@@ -1,5 +1,5 @@
 server.port=8072
-
+spring.cloud.config.name=gateway
 eureka.instance.preferIpAddress = true
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
