--- a/gateway-server.properties
+++ b/gateway-server.properties
@@ -29,7 +29,7 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/google/**
 
 spring.cloud.gateway.routes[3].id=baylor
 spring.cloud.gateway.routes[3].uri=https://baylor.edu
-spring.cloud.gateway.routes[3].predicates[0]=Path=/baylor2/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/baylor/**
 
 
 
