--- a/gateway-server.properties
+++ b/gateway-server.properties
@@ -7,6 +7,7 @@ eureka.client.serviceUrl.defaultZone = http://eurekaserver:8070/eureka/
 spring.cloud.loadbalancer.ribbon.enabled= false
 
 management.endpoint.gateway.enabled=true
+management.endpoint.gateway.refresh.enabled=true
 management.endpoints.web.exposure.include=*
 spring.cloud.gateway.discovery.locator.enabled=false
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
