--- a/gateway-server.properties
+++ b/gateway-server.properties
@@ -32,6 +32,10 @@ spring.cloud.gateway.routes[3].id=baylor
 spring.cloud.gateway.routes[3].uri=https://baylor.edu
 spring.cloud.gateway.routes[3].predicates[0]=Path=/baylor/**
 
+spring.cloud.gateway.routes[4].id=baylor
+spring.cloud.gateway.routes[4].uri=https://baylor.edu
+spring.cloud.gateway.routes[4].predicates[0]=Path=/baylor/**
+
 
 
 
