--- a/gateway-server.properties
+++ b/gateway-server.properties
@@ -32,9 +32,9 @@ spring.cloud.gateway.routes[3].id=baylor
 spring.cloud.gateway.routes[3].uri=https://baylor.edu
 spring.cloud.gateway.routes[3].predicates[0]=Path=/baylor/**
 
-spring.cloud.gateway.routes[4].id=baylor
+spring.cloud.gateway.routes[4].id=baylor2
 spring.cloud.gateway.routes[4].uri=https://baylor.edu
-spring.cloud.gateway.routes[4].predicates[0]=Path=/baylor/**
+spring.cloud.gateway.routes[4].predicates[0]=Path=/baylor2/**
 
 
 
