--- a/gateway-server.properties
+++ b/gateway-server.properties
@@ -9,7 +9,7 @@ spring.cloud.loadbalancer.ribbon.enabled= false
 management.endpoint.gateway.enabled=true
 management.endpoint.gateway.refresh.enabled=true
 management.endpoints.web.exposure.include=*
-spring.cloud.gateway.discovery.locator.enabled=false
+spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.cache.type=none
