--- a/gateway-server.properties
+++ b/gateway-server.properties
@@ -33,6 +33,11 @@ spring.cloud.gateway.routes[3].uri=https://baylor.edu
 spring.cloud.gateway.routes[3].predicates[0]=Path=/baylor/**
 spring.cloud.gateway.routes[3].filters[0]=RewritePath=/baylor/(?<path>.*), /$\{path}
 
+spring.cloud.gateway.routes[4].id=baylor5
+spring.cloud.gateway.routes[4].uri=https://baylor5.edu
+spring.cloud.gateway.routes[4].predicates[0]=Path=/baylor5/**
+spring.cloud.gateway.routes[4].filters[0]=RewritePath=/baylor5/(?<path>.*), /$\{path}
+
 
 
 
